--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion COMPILE_SDK_VERSION
@@ -9,7 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
 
@@ -24,16 +25,14 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    api "com.android.support:appcompat-v7:${SUPPORT_SDK_VERSION}"
-    api "com.android.support:support-v4:${SUPPORT_SDK_VERSION}"
-    api "com.android.support:recyclerview-v7:${SUPPORT_SDK_VERSION}"
-    api "com.android.support:design:${SUPPORT_SDK_VERSION}"
-    api "com.android.support:support-annotations:${SUPPORT_SDK_VERSION}"
-    api "com.android.support.constraint:constraint-layout:${constraint_layout_version}"
-    /*中文转拼音*/
-    implementation files('libs/pinyin4j-2.5.0.jar')
+    api 'androidx.appcompat:appcompat:1.2.0'
+    api 'androidx.legacy:legacy-support-v4:1.0.0'
+    api 'androidx.recyclerview:recyclerview:1.1.0'
+    api 'com.google.android.material:material:1.2.1'
+    api 'androidx.annotation:annotation:1.1.0'
+    api 'androidx.constraintlayout:constraintlayout:2.0.4'
     /*json解析*/
-    api 'com.google.code.gson:gson:2.8.2'
+    api 'com.google.code.gson:gson:2.8.6'
     //logger工具
     api 'com.orhanobut:logger:2.2.0'
     /*小动画库*/
@@ -44,11 +43,9 @@ dependencies {
         transitive = true
     }
 
-    /*butterKnife*/
-    implementation "com.jakewharton:butterknife:${butter_knife_version}"
-
     if (isEventBus) {
         /*eventBus*/
         api "org.greenrobot:eventbus:${event_bus_version}"
     }
+    implementation "androidx.core:core-ktx:1.3.2"
 }
