--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     /*json解析*/
     api 'com.google.code.gson:gson:2.8.6'
     //logger工具
-    api 'com.orhanobut:logger:2.2.0'
+//    api 'com.orhanobut:logger:2.2.0'
     /*小动画库*/
     api 'com.wang.avi:library:2.1.3'
     /*小图标*/
